--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
 	<meta name="mobileoptimized" content="240">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
-<body>  <!-- http://codepen.io/rilwis/pen/tnLzH -->
+<body><!-- http://codepen.io/rilwis/pen/tnLzH -->
+<div class="wrapper">
+  <h1>
+    Accordion Menu
+  </h1>
   <div id="container">
     <div id="accordion">
       <div class="item">
         <a href="#">Products</a>
+        <img src="http://placehold.it/200x100">
         <p>Lorem ipsum nec ex prompta tractatos. Ea elit sale admodum vim, at velit nemore rationibus per. Ullum qualisque dissentias ei qui, in putent doctus cotidieque mei. Mel legere mucius ne, adhuc impetus signiferumque cu eos. Has an zzril soluta impetus. An nisl graece inciderint nec, ea per rebum animal, prodesset accommodare ex eam.</p>
       </div>
       <div class="item">
         <a href="#">Highlight</a>
+        <iframe width="400" height="300" src="http://www.w3schools.com"></iframe>
         <p>Lorem ipsum nec ex prompta tractatos. Ea elit sale admodum vim, at velit nemore rationibus per. Ullum qualisque dissentias ei qui, in putent doctus cotidieque mei. Mel legere mucius ne, adhuc impetus signiferumque cu eos. Has an zzril soluta impetus. An nisl graece inciderint nec, ea per rebum animal, prodesset accommodare ex eam.</p>
       </div>
       <div class="item">
@@ -30,5 +36,6 @@
       </div>
     </div>
   </div>
+</div>
 </body>
 </html>
